*added Menagerie to the game modes *modified DestinyAccount request to match new entries with Cross Save features

--- a/AbysmalLightScoreTracker/AbysmalLightScoreTracker.csproj
+++ b/AbysmalLightScoreTracker/AbysmalLightScoreTracker.csproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <Content Include="Resources\Cultures-Yin-Yang-icon.png" />
     <Content Include="Resources\Icons8-Windows-8-Cultures-Yin-Yang.ico" />
+    <Content Include="Resources\PC_Icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
